# game_engine_vulkan

./: CMakeLists.txt  README.md  build.bat  build.sh  countLines.sh
engine/: CMakeLists.txt  countLinesOfCode.py
engine/include/: api.h
engine/include/eng/: api.h  api.hpp  engine.hpp  logging.hpp
engine/shaders/: compile.sh
engine/shaders/vertex/: shader.vert
engine/src/: engine.cpp  logging.cpp  test.cpp
test/: CMakeLists.txt
test/src/: main.cpp
